.metals/metals.log
2022.05.17 20:47:45 INFO  tracing is disabled for protocol LSP, to enable tracing of incoming and outgoing JSON messages create an empty file at /Users/adambehrman/Documents/Coding/vscode/java/GomokuSolver/.metals/lsp.trace.json or /Users/adambehrman/Library/Caches/org.scalameta.metals/lsp.trace.json
2022.05.17 20:47:46 INFO  logging to file /Users/adambehrman/Documents/Coding/vscode/java/GomokuSolver/.metals/metals.log
2022.05.17 20:47:46 INFO  Started: Metals version 0.11.5 in workspace '/Users/adambehrman/Documents/Coding/vscode/java/GomokuSolver' for client Visual Studio Code 1.67.1.
2022.05.17 20:47:48 INFO  time: initialize in 2.04s
2022.05.17 20:47:48 WARN  Flyway upgrade recommended: H2 2.1.212 is newer than this version of Flyway and support has not been tested. The latest supported version of H2 is 2.1.210.
2022.05.17 20:47:48 WARN  Build server is not auto-connectable.
2022.05.17 20:47:48 WARN  no build tool detected in workspace '/Users/adambehrman/Documents/Coding/vscode/java/GomokuSolver'. The most common cause for this problem is that the editor was opened in the wrong working directory, for example if you use sbt then the workspace directory should contain build.sbt. 
2022.05.17 20:47:50 WARN  no build target for: /Users/adambehrman/Documents/Coding/vscode/java/CatanSolver/src/catan/runner/Solver.java
2022.05.17 20:47:50 WARN  no build target for: /Users/adambehrman/Documents/Coding/vscode/java/CatanSolver/src/catan/runner/Player.java
2022.05.17 20:47:50 WARN  no build target for: /Users/adambehrman/Documents/Coding/vscode/scala/2-recursion/src/main/scala/recursion/RecFun.scala
2022.05.17 20:47:55 INFO  no build target found for /Users/adambehrman/Documents/Coding/vscode/scala/2-recursion/src/main/scala/recursion/RecFun.scala. Using presentation compiler with project's scala-library version: 3.1.2
2022.05.17 20:47:58 INFO  time: code lens generation in 7.03s
Downloading https://repo1.maven.org/maven2/org/scalameta/scalafmt-core_2.13/3.4.3/scalafmt-core_2.13-3.4.3.pom
Downloaded https://repo1.maven.org/maven2/org/scalameta/scalafmt-core_2.13/3.4.3/scalafmt-core_2.13-3.4.3.pom
Downloading https://repo1.maven.org/maven2/org/scalameta/scalameta_2.13/4.4.35/scalameta_2.13-4.4.35.pom
Downloading https://repo1.maven.org/maven2/org/scalameta/scalafmt-config_2.13/3.4.3/scalafmt-config_2.13-3.4.3.pom
Downloading https://repo1.maven.org/maven2/org/scalameta/scalafmt-sysops_2.13/3.4.3/scalafmt-sysops_2.13-3.4.3.pom
Downloaded https://repo1.maven.org/maven2/org/scalameta/scalameta_2.13/4.4.35/scalameta_2.13-4.4.35.pom
Downloaded https://repo1.maven.org/maven2/org/scalameta/scalafmt-sysops_2.13/3.4.3/scalafmt-sysops_2.13-3.4.3.pom
Downloaded https://repo1.maven.org/maven2/org/scalameta/scalafmt-config_2.13/3.4.3/scalafmt-config_2.13-3.4.3.pom
Downloading https://repo1.maven.org/maven2/com/geirsson/metaconfig-typesafe-config_2.13/0.10.0/metaconfig-typesafe-config_2.13-0.10.0.pom
Downloading https://repo1.maven.org/maven2/org/scalameta/parsers_2.13/4.4.35/parsers_2.13-4.4.35.pom
Downloaded https://repo1.maven.org/maven2/org/scalameta/parsers_2.13/4.4.35/parsers_2.13-4.4.35.pom
Downloaded https://repo1.maven.org/maven2/com/geirsson/metaconfig-typesafe-config_2.13/0.10.0/metaconfig-typesafe-config_2.13-0.10.0.pom
Downloading https://repo1.maven.org/maven2/org/scalameta/trees_2.13/4.4.35/trees_2.13-4.4.35.pom
Downloading https://repo1.maven.org/maven2/org/scala-lang/modules/scala-collection-compat_2.13/2.5.0/scala-collection-compat_2.13-2.5.0.pom
Downloaded https://repo1.maven.org/maven2/org/scalameta/trees_2.13/4.4.35/trees_2.13-4.4.35.pom
Downloaded https://repo1.maven.org/maven2/org/scala-lang/modules/scala-collection-compat_2.13/2.5.0/scala-collection-compat_2.13-2.5.0.pom
Downloading https://repo1.maven.org/maven2/org/scalameta/common_2.13/4.4.35/common_2.13-4.4.35.pom
Downloaded https://repo1.maven.org/maven2/org/scalameta/common_2.13/4.4.35/common_2.13-4.4.35.pom
Downloading https://repo1.maven.org/maven2/org/scala-lang/modules/scala-collection-compat_2.13/2.5.0/scala-collection-compat_2.13-2.5.0.jar
Downloading https://repo1.maven.org/maven2/org/scalameta/scalafmt-core_2.13/3.4.3/scalafmt-core_2.13-3.4.3.jar
Downloading https://repo1.maven.org/maven2/org/scalameta/trees_2.13/4.4.35/trees_2.13-4.4.35.jar
Downloading https://repo1.maven.org/maven2/org/scalameta/scalafmt-sysops_2.13/3.4.3/scalafmt-sysops_2.13-3.4.3.jar
Downloading https://repo1.maven.org/maven2/org/scalameta/parsers_2.13/4.4.35/parsers_2.13-4.4.35.jar
Downloading https://repo1.maven.org/maven2/org/scalameta/scalafmt-config_2.13/3.4.3/scalafmt-config_2.13-3.4.3.jar
Downloaded https://repo1.maven.org/maven2/org/scala-lang/modules/scala-collection-compat_2.13/2.5.0/scala-collection-compat_2.13-2.5.0.jar
Downloading https://repo1.maven.org/maven2/com/lihaoyi/geny_2.13/0.6.5/geny_2.13-0.6.5.jar
Downloaded https://repo1.maven.org/maven2/com/lihaoyi/geny_2.13/0.6.5/geny_2.13-0.6.5.jar
Downloading https://repo1.maven.org/maven2/org/scalameta/scalameta_2.13/4.4.35/scalameta_2.13-4.4.35.jar
Downloaded https://repo1.maven.org/maven2/org/scalameta/scalafmt-config_2.13/3.4.3/scalafmt-config_2.13-3.4.3.jar
Downloading https://repo1.maven.org/maven2/com/geirsson/metaconfig-typesafe-config_2.13/0.10.0/metaconfig-typesafe-config_2.13-0.10.0.jar
Downloaded https://repo1.maven.org/maven2/org/scalameta/scalafmt-sysops_2.13/3.4.3/scalafmt-sysops_2.13-3.4.3.jar
Downloading https://repo1.maven.org/maven2/org/scalameta/common_2.13/4.4.35/common_2.13-4.4.35.jar
Downloaded https://repo1.maven.org/maven2/com/geirsson/metaconfig-typesafe-config_2.13/0.10.0/metaconfig-typesafe-config_2.13-0.10.0.jar
Downloaded https://repo1.maven.org/maven2/org/scalameta/scalafmt-core_2.13/3.4.3/scalafmt-core_2.13-3.4.3.jar
Downloaded https://repo1.maven.org/maven2/org/scalameta/scalameta_2.13/4.4.35/scalameta_2.13-4.4.35.jar
Downloaded https://repo1.maven.org/maven2/org/scalameta/trees_2.13/4.4.35/trees_2.13-4.4.35.jar
Downloaded https://repo1.maven.org/maven2/org/scalameta/parsers_2.13/4.4.35/parsers_2.13-4.4.35.jar
Downloaded https://repo1.maven.org/maven2/org/scalameta/common_2.13/4.4.35/common_2.13-4.4.35.jar
2022.05.17 20:48:10 ERROR scalafmt: /Users/adambehrman/Documents/Coding/vscode/scala/2-recursion/src/main/scala/recursion/RecFun.scala:3: error: [dialect scala213] ; expected but : found
object RecFun extends RecFunInterface:
                                     ^
2022.05.17 20:48:48 WARN  no build target for: /Users/adambehrman/Documents/Coding/vscode/scala/3-funsets/main/scala/funsets/Main.scala
2022.05.17 20:48:49 WARN  no build target for: /Users/adambehrman/Documents/Coding/vscode/scala/3-funsets/main/scala/funsets/FunSetsInterface.scala
2022.05.17 20:48:50 WARN  no build target for: /Users/adambehrman/Documents/Coding/vscode/scala/3-funsets/main/scala/funsets/FunSets.scala
2022.05.17 23:21:13 INFO  shutting down Metals
